fix: 简化获取 job.runs 的参数
